my1stcompiler2/parser.output
Nonterminals useless in grammar

   interpolated_expression
   interpolated_part


Terminals unused in grammar

   COLON
   NUMBER_TYPE
   STRING_TYPE
   BOOLEAN_TYPE
   CLASS_IDENTIFIER
   TRUE
   FALSE
   ERROR
   SINGLE_QUOTE
   DOUBLE_QUOTE
   EXP
   BACKTICK
   DOLLAR
   '='


Rules useless in grammar

   64 interpolated_expression: interpolated_part
   65                        | interpolated_expression interpolated_part

   66 interpolated_part: STRING
   67                  | DOLLAR LBRACE expressions RBRACE


State 42 conflicts: 1 shift/reduce
State 76 conflicts: 10 shift/reduce
State 77 conflicts: 10 shift/reduce
State 81 conflicts: 10 shift/reduce
State 82 conflicts: 3 shift/reduce
State 83 conflicts: 3 shift/reduce
State 84 conflicts: 3 shift/reduce
State 85 conflicts: 3 shift/reduce
State 86 conflicts: 3 shift/reduce
State 87 conflicts: 3 shift/reduce
State 88 conflicts: 3 shift/reduce
State 97 conflicts: 10 shift/reduce
State 109 conflicts: 10 shift/reduce


Grammar

    0 $accept: begin $end

    1 begin: statements

    2 statements: statement statements
    3           | %empty

    4 statement: variable_declaration
    5          | variable_declaration SEMICOLON
    6          | function_declaration
    7          | async_function
    8          | console_log
    9          | expression_statement
   10          | return_statement
   11          | if_statement
   12          | function_call

   13 variable_declaration: LET IDENTIFIER ASSIGN expressions
   14                     | CONST IDENTIFIER ASSIGN expressions

   15 function_declaration: FUNCTION IDENTIFIER LPARENTHESES parameter_list RPARENTHESES LBRACE statements RBRACE

   16 parameter_list: expressions
   17               | expressions COMMA array_elements
   18               | %empty

   19 function_call: expressions LPARENTHESES argument_list RPARENTHESES

   20 argument_list: expressions
   21              | expressions COMMA argument_list
   22              | %empty

   23 console_log: CONSOLE_LOG LPARENTHESES console_arguments RPARENTHESES SEMICOLON

   24 console_arguments: expressions
   25                  | expressions COMMA console_arguments

   26 expression_statement: expressions SEMICOLON

   27 return_statement: RETURN expressions SEMICOLON
   28                 | RETURN expressions

   29 $@1: %empty

   30 $@2: %empty

   31 if_statement: IF LPARENTHESES expressions RPARENTHESES LBRACE $@1 statements RBRACE $@2 else_declaration

   32 $@3: %empty

   33 else_declaration: ELSE LBRACE $@3 statements RBRACE statements RBRACE
   34                 | %empty

   35 expressions: NUMBER
   36            | FLOAT
   37            | STRING
   38            | BOOLEAN
   39            | IDENTIFIER
   40            | array
   41            | array_manipulate
   42            | expressions '+' expressions
   43            | expressions '-' expressions
   44            | expressions '*' expressions
   45            | expressions '/' expressions
   46            | expressions '^' expressions
   47            | expressions EQ expressions
   48            | expressions ASSIGN expressions
   49            | expressions '>' expressions
   50            | expressions '<' expressions
   51            | RBRACKET expressions LBRACKET
   52            | LPARENTHESES expressions RPARENTHESES
   53            | LPARENTHESES array_elements RPARENTHESES ARROW expressions
   54            | LPARENTHESES RPARENTHESES ARROW expressions
   55            | LPARENTHESES array_elements RPARENTHESES
   56            | wait_expression

   57 wait_expression: AWAIT IDENTIFIER expressions
   58                | AWAIT IDENTIFIER DOT IDENTIFIER

   59 array_manipulate: expressions DOT MAP LPARENTHESES IDENTIFIER ARROW expressions RPARENTHESES

   60 async_function: ASYNC FUNCTION IDENTIFIER LPARENTHESES parameter_list RPARENTHESES LBRACE statements RBRACE

   61 array: LBRACKET array_elements RBRACKET

   62 array_elements: expressions
   63               | expressions COMMA array_elements


Terminals, with rules where they appear

$end (0) 0
'*' (42) 44
'+' (43) 42
'-' (45) 43
'/' (47) 45
'<' (60) 50
'=' (61)
'>' (62) 49
'^' (94) 46
error (256)
LET (258) 13
COLON (259)
NUMBER_TYPE (260)
STRING_TYPE (261)
ASSIGN (262) 13 14 48
SEMICOLON (263) 5 23 26 27
BOOLEAN_TYPE (264)
CLASS_IDENTIFIER (265)
IF (266) 31
ELSE (267) 33
MAP (268) 59
IDENTIFIER (269) 13 14 15 39 57 58 59 60
NUMBER (270) 35
FLOAT (271) 36
STRING (272) 37
TRUE (273)
FALSE (274)
CONSOLE_LOG (275) 23
CONST (276) 14
RETURN (277) 27 28
FUNCTION (278) 15 60
BOOLEAN (279) 38
ERROR (280)
LBRACKET (281) 51 61
RBRACKET (282) 51 61
LBRACE (283) 15 31 33 60
RBRACE (284) 15 31 33 60
LPARENTHESES (285) 15 19 23 31 52 53 54 55 59 60
RPARENTHESES (286) 15 19 23 31 52 53 54 55 59 60
COMMA (287) 17 21 25 63
SINGLE_QUOTE (288)
DOT (289) 58 59
DOUBLE_QUOTE (290)
EXP (291)
EQ (292) 47
BACKTICK (293)
DOLLAR (294)
ARROW (295) 53 54 59
ASYNC (296) 60
AWAIT (297) 57 58


Nonterminals, with rules where they appear

$accept (51)
    on left: 0
begin (52)
    on left: 1, on right: 0
statements (53)
    on left: 2 3, on right: 1 2 15 31 33 60
statement (54)
    on left: 4 5 6 7 8 9 10 11 12, on right: 2
variable_declaration (55)
    on left: 13 14, on right: 4 5
function_declaration (56)
    on left: 15, on right: 6
parameter_list (57)
    on left: 16 17 18, on right: 15 60
function_call (58)
    on left: 19, on right: 12
argument_list (59)
    on left: 20 21 22, on right: 19 21
console_log (60)
    on left: 23, on right: 8
console_arguments (61)
    on left: 24 25, on right: 23 25
expression_statement (62)
    on left: 26, on right: 9
return_statement (63)
    on left: 27 28, on right: 10
if_statement (64)
    on left: 31, on right: 11
$@1 (65)
    on left: 29, on right: 31
$@2 (66)
    on left: 30, on right: 31
else_declaration (67)
    on left: 33 34, on right: 31
$@3 (68)
    on left: 32, on right: 33
expressions (69)
    on left: 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52
    53 54 55 56, on right: 13 14 16 17 19 20 21 24 25 26 27 28 31 42
    43 44 45 46 47 48 49 50 51 52 53 54 57 59 62 63
wait_expression (70)
    on left: 57 58, on right: 56
array_manipulate (71)
    on left: 59, on right: 41
async_function (72)
    on left: 60, on right: 7
array (73)
    on left: 61, on right: 40
array_elements (74)
    on left: 62 63, on right: 17 53 55 61 63


State 0

    0 $accept: . begin $end

    LET           shift, and go to state 1
    IF            shift, and go to state 2
    IDENTIFIER    shift, and go to state 3
    NUMBER        shift, and go to state 4
    FLOAT         shift, and go to state 5
    STRING        shift, and go to state 6
    CONSOLE_LOG   shift, and go to state 7
    CONST         shift, and go to state 8
    RETURN        shift, and go to state 9
    FUNCTION      shift, and go to state 10
    BOOLEAN       shift, and go to state 11
    LBRACKET      shift, and go to state 12
    RBRACKET      shift, and go to state 13
    LPARENTHESES  shift, and go to state 14
    ASYNC         shift, and go to state 15
    AWAIT         shift, and go to state 16

    $default  reduce using rule 3 (statements)

    begin                 go to state 17
    statements            go to state 18
    statement             go to state 19
    variable_declaration  go to state 20
    function_declaration  go to state 21
    function_call         go to state 22
    console_log           go to state 23
    expression_statement  go to state 24
    return_statement      go to state 25
    if_statement          go to state 26
    expressions           go to state 27
    wait_expression       go to state 28
    array_manipulate      go to state 29
    async_function        go to state 30
    array                 go to state 31


State 1

   13 variable_declaration: LET . IDENTIFIER ASSIGN expressions

    IDENTIFIER  shift, and go to state 32


State 2

   31 if_statement: IF . LPARENTHESES expressions RPARENTHESES LBRACE $@1 statements RBRACE $@2 else_declaration

    LPARENTHESES  shift, and go to state 33


State 3

   39 expressions: IDENTIFIER .

    $default  reduce using rule 39 (expressions)


State 4

   35 expressions: NUMBER .

    $default  reduce using rule 35 (expressions)


State 5

   36 expressions: FLOAT .

    $default  reduce using rule 36 (expressions)


State 6

   37 expressions: STRING .

    $default  reduce using rule 37 (expressions)


State 7

   23 console_log: CONSOLE_LOG . LPARENTHESES console_arguments RPARENTHESES SEMICOLON

    LPARENTHESES  shift, and go to state 34


State 8

   14 variable_declaration: CONST . IDENTIFIER ASSIGN expressions

    IDENTIFIER  shift, and go to state 35


State 9

   27 return_statement: RETURN . expressions SEMICOLON
   28                 | RETURN . expressions

    IDENTIFIER    shift, and go to state 3
    NUMBER        shift, and go to state 4
    FLOAT         shift, and go to state 5
    STRING        shift, and go to state 6
    BOOLEAN       shift, and go to state 11
    LBRACKET      shift, and go to state 12
    RBRACKET      shift, and go to state 13
    LPARENTHESES  shift, and go to state 14
    AWAIT         shift, and go to state 16

    expressions       go to state 36
    wait_expression   go to state 28
    array_manipulate  go to state 29
    array             go to state 31


State 10

   15 function_declaration: FUNCTION . IDENTIFIER LPARENTHESES parameter_list RPARENTHESES LBRACE statements RBRACE

    IDENTIFIER  shift, and go to state 37


State 11

   38 expressions: BOOLEAN .

    $default  reduce using rule 38 (expressions)


State 12

   61 array: LBRACKET . array_elements RBRACKET

    IDENTIFIER    shift, and go to state 3
    NUMBER        shift, and go to state 4
    FLOAT         shift, and go to state 5
    STRING        shift, and go to state 6
    BOOLEAN       shift, and go to state 11
    LBRACKET      shift, and go to state 12
    RBRACKET      shift, and go to state 13
    LPARENTHESES  shift, and go to state 14
    AWAIT         shift, and go to state 16

    expressions       go to state 38
    wait_expression   go to state 28
    array_manipulate  go to state 29
    array             go to state 31
    array_elements    go to state 39


State 13

   51 expressions: RBRACKET . expressions LBRACKET

    IDENTIFIER    shift, and go to state 3
    NUMBER        shift, and go to state 4
    FLOAT         shift, and go to state 5
    STRING        shift, and go to state 6
    BOOLEAN       shift, and go to state 11
    LBRACKET      shift, and go to state 12
    RBRACKET      shift, and go to state 13
    LPARENTHESES  shift, and go to state 14
    AWAIT         shift, and go to state 16

    expressions       go to state 40
    wait_expression   go to state 28
    array_manipulate  go to state 29
    array             go to state 31


State 14

   52 expressions: LPARENTHESES . expressions RPARENTHESES
   53            | LPARENTHESES . array_elements RPARENTHESES ARROW expressions
   54            | LPARENTHESES . RPARENTHESES ARROW expressions
   55            | LPARENTHESES . array_elements RPARENTHESES

    IDENTIFIER    shift, and go to state 3
    NUMBER        shift, and go to state 4
    FLOAT         shift, and go to state 5
    STRING        shift, and go to state 6
    BOOLEAN       shift, and go to state 11
    LBRACKET      shift, and go to state 12
    RBRACKET      shift, and go to state 13
    LPARENTHESES  shift, and go to state 14
    RPARENTHESES  shift, and go to state 41
    AWAIT         shift, and go to state 16

    expressions       go to state 42
    wait_expression   go to state 28
    array_manipulate  go to state 29
    array             go to state 31
    array_elements    go to state 43


State 15

   60 async_function: ASYNC . FUNCTION IDENTIFIER LPARENTHESES parameter_list RPARENTHESES LBRACE statements RBRACE

    FUNCTION  shift, and go to state 44


State 16

   57 wait_expression: AWAIT . IDENTIFIER expressions
   58                | AWAIT . IDENTIFIER DOT IDENTIFIER

    IDENTIFIER  shift, and go to state 45


State 17

    0 $accept: begin . $end

    $end  shift, and go to state 46


State 18

    1 begin: statements .

    $default  reduce using rule 1 (begin)


State 19

    2 statements: statement . statements

    LET           shift, and go to state 1
    IF            shift, and go to state 2
    IDENTIFIER    shift, and go to state 3
    NUMBER        shift, and go to state 4
    FLOAT         shift, and go to state 5
    STRING        shift, and go to state 6
    CONSOLE_LOG   shift, and go to state 7
    CONST         shift, and go to state 8
    RETURN        shift, and go to state 9
    FUNCTION      shift, and go to state 10
    BOOLEAN       shift, and go to state 11
    LBRACKET      shift, and go to state 12
    RBRACKET      shift, and go to state 13
    LPARENTHESES  shift, and go to state 14
    ASYNC         shift, and go to state 15
    AWAIT         shift, and go to state 16

    $default  reduce using rule 3 (statements)

    statements            go to state 47
    statement             go to state 19
    variable_declaration  go to state 20
    function_declaration  go to state 21
    function_call         go to state 22
    console_log           go to state 23
    expression_statement  go to state 24
    return_statement      go to state 25
    if_statement          go to state 26
    expressions           go to state 27
    wait_expression       go to state 28
    array_manipulate      go to state 29
    async_function        go to state 30
    array                 go to state 31


State 20

    4 statement: variable_declaration .
    5          | variable_declaration . SEMICOLON

    SEMICOLON  shift, and go to state 48

    $default  reduce using rule 4 (statement)


State 21

    6 statement: function_declaration .

    $default  reduce using rule 6 (statement)


State 22

   12 statement: function_call .

    $default  reduce using rule 12 (statement)


State 23

    8 statement: console_log .

    $default  reduce using rule 8 (statement)


State 24

    9 statement: expression_statement .

    $default  reduce using rule 9 (statement)


State 25

   10 statement: return_statement .

    $default  reduce using rule 10 (statement)


State 26

   11 statement: if_statement .

    $default  reduce using rule 11 (statement)


State 27

   19 function_call: expressions . LPARENTHESES argument_list RPARENTHESES
   26 expression_statement: expressions . SEMICOLON
   42 expressions: expressions . '+' expressions
   43            | expressions . '-' expressions
   44            | expressions . '*' expressions
   45            | expressions . '/' expressions
   46            | expressions . '^' expressions
   47            | expressions . EQ expressions
   48            | expressions . ASSIGN expressions
   49            | expressions . '>' expressions
   50            | expressions . '<' expressions
   59 array_manipulate: expressions . DOT MAP LPARENTHESES IDENTIFIER ARROW expressions RPARENTHESES

    ASSIGN        shift, and go to state 49
    SEMICOLON     shift, and go to state 50
    LPARENTHESES  shift, and go to state 51
    DOT           shift, and go to state 52
    EQ            shift, and go to state 53
    '-'           shift, and go to state 54
    '+'           shift, and go to state 55
    '*'           shift, and go to state 56
    '/'           shift, and go to state 57
    '^'           shift, and go to state 58
    '>'           shift, and go to state 59
    '<'           shift, and go to state 60


State 28

   56 expressions: wait_expression .

    $default  reduce using rule 56 (expressions)


State 29

   41 expressions: array_manipulate .

    $default  reduce using rule 41 (expressions)


State 30

    7 statement: async_function .

    $default  reduce using rule 7 (statement)


State 31

   40 expressions: array .

    $default  reduce using rule 40 (expressions)


State 32

   13 variable_declaration: LET IDENTIFIER . ASSIGN expressions

    ASSIGN  shift, and go to state 61


State 33

   31 if_statement: IF LPARENTHESES . expressions RPARENTHESES LBRACE $@1 statements RBRACE $@2 else_declaration

    IDENTIFIER    shift, and go to state 3
    NUMBER        shift, and go to state 4
    FLOAT         shift, and go to state 5
    STRING        shift, and go to state 6
    BOOLEAN       shift, and go to state 11
    LBRACKET      shift, and go to state 12
    RBRACKET      shift, and go to state 13
    LPARENTHESES  shift, and go to state 14
    AWAIT         shift, and go to state 16

    expressions       go to state 62
    wait_expression   go to state 28
    array_manipulate  go to state 29
    array             go to state 31


State 34

   23 console_log: CONSOLE_LOG LPARENTHESES . console_arguments RPARENTHESES SEMICOLON

    IDENTIFIER    shift, and go to state 3
    NUMBER        shift, and go to state 4
    FLOAT         shift, and go to state 5
    STRING        shift, and go to state 6
    BOOLEAN       shift, and go to state 11
    LBRACKET      shift, and go to state 12
    RBRACKET      shift, and go to state 13
    LPARENTHESES  shift, and go to state 14
    AWAIT         shift, and go to state 16

    console_arguments  go to state 63
    expressions        go to state 64
    wait_expression    go to state 28
    array_manipulate   go to state 29
    array              go to state 31


State 35

   14 variable_declaration: CONST IDENTIFIER . ASSIGN expressions

    ASSIGN  shift, and go to state 65


State 36

   27 return_statement: RETURN expressions . SEMICOLON
   28                 | RETURN expressions .
   42 expressions: expressions . '+' expressions
   43            | expressions . '-' expressions
   44            | expressions . '*' expressions
   45            | expressions . '/' expressions
   46            | expressions . '^' expressions
   47            | expressions . EQ expressions
   48            | expressions . ASSIGN expressions
   49            | expressions . '>' expressions
   50            | expressions . '<' expressions
   59 array_manipulate: expressions . DOT MAP LPARENTHESES IDENTIFIER ARROW expressions RPARENTHESES

    ASSIGN     shift, and go to state 49
    SEMICOLON  shift, and go to state 66
    DOT        shift, and go to state 52
    EQ         shift, and go to state 53
    '-'        shift, and go to state 54
    '+'        shift, and go to state 55
    '*'        shift, and go to state 56
    '/'        shift, and go to state 57
    '^'        shift, and go to state 58
    '>'        shift, and go to state 59
    '<'        shift, and go to state 60

    $default  reduce using rule 28 (return_statement)


State 37

   15 function_declaration: FUNCTION IDENTIFIER . LPARENTHESES parameter_list RPARENTHESES LBRACE statements RBRACE

    LPARENTHESES  shift, and go to state 67


State 38

   42 expressions: expressions . '+' expressions
   43            | expressions . '-' expressions
   44            | expressions . '*' expressions
   45            | expressions . '/' expressions
   46            | expressions . '^' expressions
   47            | expressions . EQ expressions
   48            | expressions . ASSIGN expressions
   49            | expressions . '>' expressions
   50            | expressions . '<' expressions
   59 array_manipulate: expressions . DOT MAP LPARENTHESES IDENTIFIER ARROW expressions RPARENTHESES
   62 array_elements: expressions .
   63               | expressions . COMMA array_elements

    ASSIGN  shift, and go to state 49
    COMMA   shift, and go to state 68
    DOT     shift, and go to state 52
    EQ      shift, and go to state 53
    '-'     shift, and go to state 54
    '+'     shift, and go to state 55
    '*'     shift, and go to state 56
    '/'     shift, and go to state 57
    '^'     shift, and go to state 58
    '>'     shift, and go to state 59
    '<'     shift, and go to state 60

    $default  reduce using rule 62 (array_elements)


State 39

   61 array: LBRACKET array_elements . RBRACKET

    RBRACKET  shift, and go to state 69


State 40

   42 expressions: expressions . '+' expressions
   43            | expressions . '-' expressions
   44            | expressions . '*' expressions
   45            | expressions . '/' expressions
   46            | expressions . '^' expressions
   47            | expressions . EQ expressions
   48            | expressions . ASSIGN expressions
   49            | expressions . '>' expressions
   50            | expressions . '<' expressions
   51            | RBRACKET expressions . LBRACKET
   59 array_manipulate: expressions . DOT MAP LPARENTHESES IDENTIFIER ARROW expressions RPARENTHESES

    ASSIGN    shift, and go to state 49
    LBRACKET  shift, and go to state 70
    DOT       shift, and go to state 52
    EQ        shift, and go to state 53
    '-'       shift, and go to state 54
    '+'       shift, and go to state 55
    '*'       shift, and go to state 56
    '/'       shift, and go to state 57
    '^'       shift, and go to state 58
    '>'       shift, and go to state 59
    '<'       shift, and go to state 60


State 41

   54 expressions: LPARENTHESES RPARENTHESES . ARROW expressions

    ARROW  shift, and go to state 71


State 42

   42 expressions: expressions . '+' expressions
   43            | expressions . '-' expressions
   44            | expressions . '*' expressions
   45            | expressions . '/' expressions
   46            | expressions . '^' expressions
   47            | expressions . EQ expressions
   48            | expressions . ASSIGN expressions
   49            | expressions . '>' expressions
   50            | expressions . '<' expressions
   52            | LPARENTHESES expressions . RPARENTHESES
   59 array_manipulate: expressions . DOT MAP LPARENTHESES IDENTIFIER ARROW expressions RPARENTHESES
   62 array_elements: expressions .
   63               | expressions . COMMA array_elements

    ASSIGN        shift, and go to state 49
    RPARENTHESES  shift, and go to state 72
    COMMA         shift, and go to state 68
    DOT           shift, and go to state 52
    EQ            shift, and go to state 53
    '-'           shift, and go to state 54
    '+'           shift, and go to state 55
    '*'           shift, and go to state 56
    '/'           shift, and go to state 57
    '^'           shift, and go to state 58
    '>'           shift, and go to state 59
    '<'           shift, and go to state 60

    RPARENTHESES  [reduce using rule 62 (array_elements)]


State 43

   53 expressions: LPARENTHESES array_elements . RPARENTHESES ARROW expressions
   55            | LPARENTHESES array_elements . RPARENTHESES

    RPARENTHESES  shift, and go to state 73


State 44

   60 async_function: ASYNC FUNCTION . IDENTIFIER LPARENTHESES parameter_list RPARENTHESES LBRACE statements RBRACE

    IDENTIFIER  shift, and go to state 74


State 45

   57 wait_expression: AWAIT IDENTIFIER . expressions
   58                | AWAIT IDENTIFIER . DOT IDENTIFIER

    IDENTIFIER    shift, and go to state 3
    NUMBER        shift, and go to state 4
    FLOAT         shift, and go to state 5
    STRING        shift, and go to state 6
    BOOLEAN       shift, and go to state 11
    LBRACKET      shift, and go to state 12
    RBRACKET      shift, and go to state 13
    LPARENTHESES  shift, and go to state 14
    DOT           shift, and go to state 75
    AWAIT         shift, and go to state 16

    expressions       go to state 76
    wait_expression   go to state 28
    array_manipulate  go to state 29
    array             go to state 31


State 46

    0 $accept: begin $end .

    $default  accept


State 47

    2 statements: statement statements .

    $default  reduce using rule 2 (statements)


State 48

    5 statement: variable_declaration SEMICOLON .

    $default  reduce using rule 5 (statement)


State 49

   48 expressions: expressions ASSIGN . expressions

    IDENTIFIER    shift, and go to state 3
    NUMBER        shift, and go to state 4
    FLOAT         shift, and go to state 5
    STRING        shift, and go to state 6
    BOOLEAN       shift, and go to state 11
    LBRACKET      shift, and go to state 12
    RBRACKET      shift, and go to state 13
    LPARENTHESES  shift, and go to state 14
    AWAIT         shift, and go to state 16

    expressions       go to state 77
    wait_expression   go to state 28
    array_manipulate  go to state 29
    array             go to state 31


State 50

   26 expression_statement: expressions SEMICOLON .

    $default  reduce using rule 26 (expression_statement)


State 51

   19 function_call: expressions LPARENTHESES . argument_list RPARENTHESES

    IDENTIFIER    shift, and go to state 3
    NUMBER        shift, and go to state 4
    FLOAT         shift, and go to state 5
    STRING        shift, and go to state 6
    BOOLEAN       shift, and go to state 11
    LBRACKET      shift, and go to state 12
    RBRACKET      shift, and go to state 13
    LPARENTHESES  shift, and go to state 14
    AWAIT         shift, and go to state 16

    $default  reduce using rule 22 (argument_list)

    argument_list     go to state 78
    expressions       go to state 79
    wait_expression   go to state 28
    array_manipulate  go to state 29
    array             go to state 31


State 52

   59 array_manipulate: expressions DOT . MAP LPARENTHESES IDENTIFIER ARROW expressions RPARENTHESES

    MAP  shift, and go to state 80


State 53

   47 expressions: expressions EQ . expressions

    IDENTIFIER    shift, and go to state 3
    NUMBER        shift, and go to state 4
    FLOAT         shift, and go to state 5
    STRING        shift, and go to state 6
    BOOLEAN       shift, and go to state 11
    LBRACKET      shift, and go to state 12
    RBRACKET      shift, and go to state 13
    LPARENTHESES  shift, and go to state 14
    AWAIT         shift, and go to state 16

    expressions       go to state 81
    wait_expression   go to state 28
    array_manipulate  go to state 29
    array             go to state 31


State 54

   43 expressions: expressions '-' . expressions

    IDENTIFIER    shift, and go to state 3
    NUMBER        shift, and go to state 4
    FLOAT         shift, and go to state 5
    STRING        shift, and go to state 6
    BOOLEAN       shift, and go to state 11
    LBRACKET      shift, and go to state 12
    RBRACKET      shift, and go to state 13
    LPARENTHESES  shift, and go to state 14
    AWAIT         shift, and go to state 16

    expressions       go to state 82
    wait_expression   go to state 28
    array_manipulate  go to state 29
    array             go to state 31


State 55

   42 expressions: expressions '+' . expressions

    IDENTIFIER    shift, and go to state 3
    NUMBER        shift, and go to state 4
    FLOAT         shift, and go to state 5
    STRING        shift, and go to state 6
    BOOLEAN       shift, and go to state 11
    LBRACKET      shift, and go to state 12
    RBRACKET      shift, and go to state 13
    LPARENTHESES  shift, and go to state 14
    AWAIT         shift, and go to state 16

    expressions       go to state 83
    wait_expression   go to state 28
    array_manipulate  go to state 29
    array             go to state 31


State 56

   44 expressions: expressions '*' . expressions

    IDENTIFIER    shift, and go to state 3
    NUMBER        shift, and go to state 4
    FLOAT         shift, and go to state 5
    STRING        shift, and go to state 6
    BOOLEAN       shift, and go to state 11
    LBRACKET      shift, and go to state 12
    RBRACKET      shift, and go to state 13
    LPARENTHESES  shift, and go to state 14
    AWAIT         shift, and go to state 16

    expressions       go to state 84
    wait_expression   go to state 28
    array_manipulate  go to state 29
    array             go to state 31


State 57

   45 expressions: expressions '/' . expressions

    IDENTIFIER    shift, and go to state 3
    NUMBER        shift, and go to state 4
    FLOAT         shift, and go to state 5
    STRING        shift, and go to state 6
    BOOLEAN       shift, and go to state 11
    LBRACKET      shift, and go to state 12
    RBRACKET      shift, and go to state 13
    LPARENTHESES  shift, and go to state 14
    AWAIT         shift, and go to state 16

    expressions       go to state 85
    wait_expression   go to state 28
    array_manipulate  go to state 29
    array             go to state 31


State 58

   46 expressions: expressions '^' . expressions

    IDENTIFIER    shift, and go to state 3
    NUMBER        shift, and go to state 4
    FLOAT         shift, and go to state 5
    STRING        shift, and go to state 6
    BOOLEAN       shift, and go to state 11
    LBRACKET      shift, and go to state 12
    RBRACKET      shift, and go to state 13
    LPARENTHESES  shift, and go to state 14
    AWAIT         shift, and go to state 16

    expressions       go to state 86
    wait_expression   go to state 28
    array_manipulate  go to state 29
    array             go to state 31


State 59

   49 expressions: expressions '>' . expressions

    IDENTIFIER    shift, and go to state 3
    NUMBER        shift, and go to state 4
    FLOAT         shift, and go to state 5
    STRING        shift, and go to state 6
    BOOLEAN       shift, and go to state 11
    LBRACKET      shift, and go to state 12
    RBRACKET      shift, and go to state 13
    LPARENTHESES  shift, and go to state 14
    AWAIT         shift, and go to state 16

    expressions       go to state 87
    wait_expression   go to state 28
    array_manipulate  go to state 29
    array             go to state 31


State 60

   50 expressions: expressions '<' . expressions

    IDENTIFIER    shift, and go to state 3
    NUMBER        shift, and go to state 4
    FLOAT         shift, and go to state 5
    STRING        shift, and go to state 6
    BOOLEAN       shift, and go to state 11
    LBRACKET      shift, and go to state 12
    RBRACKET      shift, and go to state 13
    LPARENTHESES  shift, and go to state 14
    AWAIT         shift, and go to state 16

    expressions       go to state 88
    wait_expression   go to state 28
    array_manipulate  go to state 29
    array             go to state 31


State 61

   13 variable_declaration: LET IDENTIFIER ASSIGN . expressions

    IDENTIFIER    shift, and go to state 3
    NUMBER        shift, and go to state 4
    FLOAT         shift, and go to state 5
    STRING        shift, and go to state 6
    BOOLEAN       shift, and go to state 11
    LBRACKET      shift, and go to state 12
    RBRACKET      shift, and go to state 13
    LPARENTHESES  shift, and go to state 14
    AWAIT         shift, and go to state 16

    expressions       go to state 89
    wait_expression   go to state 28
    array_manipulate  go to state 29
    array             go to state 31


State 62

   31 if_statement: IF LPARENTHESES expressions . RPARENTHESES LBRACE $@1 statements RBRACE $@2 else_declaration
   42 expressions: expressions . '+' expressions
   43            | expressions . '-' expressions
   44            | expressions . '*' expressions
   45            | expressions . '/' expressions
   46            | expressions . '^' expressions
   47            | expressions . EQ expressions
   48            | expressions . ASSIGN expressions
   49            | expressions . '>' expressions
   50            | expressions . '<' expressions
   59 array_manipulate: expressions . DOT MAP LPARENTHESES IDENTIFIER ARROW expressions RPARENTHESES

    ASSIGN        shift, and go to state 49
    RPARENTHESES  shift, and go to state 90
    DOT           shift, and go to state 52
    EQ            shift, and go to state 53
    '-'           shift, and go to state 54
    '+'           shift, and go to state 55
    '*'           shift, and go to state 56
    '/'           shift, and go to state 57
    '^'           shift, and go to state 58
    '>'           shift, and go to state 59
    '<'           shift, and go to state 60


State 63

   23 console_log: CONSOLE_LOG LPARENTHESES console_arguments . RPARENTHESES SEMICOLON

    RPARENTHESES  shift, and go to state 91


State 64

   24 console_arguments: expressions .
   25                  | expressions . COMMA console_arguments
   42 expressions: expressions . '+' expressions
   43            | expressions . '-' expressions
   44            | expressions . '*' expressions
   45            | expressions . '/' expressions
   46            | expressions . '^' expressions
   47            | expressions . EQ expressions
   48            | expressions . ASSIGN expressions
   49            | expressions . '>' expressions
   50            | expressions . '<' expressions
   59 array_manipulate: expressions . DOT MAP LPARENTHESES IDENTIFIER ARROW expressions RPARENTHESES

    ASSIGN  shift, and go to state 49
    COMMA   shift, and go to state 92
    DOT     shift, and go to state 52
    EQ      shift, and go to state 53
    '-'     shift, and go to state 54
    '+'     shift, and go to state 55
    '*'     shift, and go to state 56
    '/'     shift, and go to state 57
    '^'     shift, and go to state 58
    '>'     shift, and go to state 59
    '<'     shift, and go to state 60

    $default  reduce using rule 24 (console_arguments)


State 65

   14 variable_declaration: CONST IDENTIFIER ASSIGN . expressions

    IDENTIFIER    shift, and go to state 3
    NUMBER        shift, and go to state 4
    FLOAT         shift, and go to state 5
    STRING        shift, and go to state 6
    BOOLEAN       shift, and go to state 11
    LBRACKET      shift, and go to state 12
    RBRACKET      shift, and go to state 13
    LPARENTHESES  shift, and go to state 14
    AWAIT         shift, and go to state 16

    expressions       go to state 93
    wait_expression   go to state 28
    array_manipulate  go to state 29
    array             go to state 31


State 66

   27 return_statement: RETURN expressions SEMICOLON .

    $default  reduce using rule 27 (return_statement)


State 67

   15 function_declaration: FUNCTION IDENTIFIER LPARENTHESES . parameter_list RPARENTHESES LBRACE statements RBRACE

    IDENTIFIER    shift, and go to state 3
    NUMBER        shift, and go to state 4
    FLOAT         shift, and go to state 5
    STRING        shift, and go to state 6
    BOOLEAN       shift, and go to state 11
    LBRACKET      shift, and go to state 12
    RBRACKET      shift, and go to state 13
    LPARENTHESES  shift, and go to state 14
    AWAIT         shift, and go to state 16

    $default  reduce using rule 18 (parameter_list)

    parameter_list    go to state 94
    expressions       go to state 95
    wait_expression   go to state 28
    array_manipulate  go to state 29
    array             go to state 31


State 68

   63 array_elements: expressions COMMA . array_elements

    IDENTIFIER    shift, and go to state 3
    NUMBER        shift, and go to state 4
    FLOAT         shift, and go to state 5
    STRING        shift, and go to state 6
    BOOLEAN       shift, and go to state 11
    LBRACKET      shift, and go to state 12
    RBRACKET      shift, and go to state 13
    LPARENTHESES  shift, and go to state 14
    AWAIT         shift, and go to state 16

    expressions       go to state 38
    wait_expression   go to state 28
    array_manipulate  go to state 29
    array             go to state 31
    array_elements    go to state 96


State 69

   61 array: LBRACKET array_elements RBRACKET .

    $default  reduce using rule 61 (array)


State 70

   51 expressions: RBRACKET expressions LBRACKET .

    $default  reduce using rule 51 (expressions)


State 71

   54 expressions: LPARENTHESES RPARENTHESES ARROW . expressions

    IDENTIFIER    shift, and go to state 3
    NUMBER        shift, and go to state 4
    FLOAT         shift, and go to state 5
    STRING        shift, and go to state 6
    BOOLEAN       shift, and go to state 11
    LBRACKET      shift, and go to state 12
    RBRACKET      shift, and go to state 13
    LPARENTHESES  shift, and go to state 14
    AWAIT         shift, and go to state 16

    expressions       go to state 97
    wait_expression   go to state 28
    array_manipulate  go to state 29
    array             go to state 31


State 72

   52 expressions: LPARENTHESES expressions RPARENTHESES .

    $default  reduce using rule 52 (expressions)


State 73

   53 expressions: LPARENTHESES array_elements RPARENTHESES . ARROW expressions
   55            | LPARENTHESES array_elements RPARENTHESES .

    ARROW  shift, and go to state 98

    $default  reduce using rule 55 (expressions)


State 74

   60 async_function: ASYNC FUNCTION IDENTIFIER . LPARENTHESES parameter_list RPARENTHESES LBRACE statements RBRACE
